# Robot-Platform

./: .gitconfig  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  TODO.md  build.rs  config.json  config.jsonc  run.out  task.json  task.yaml  temp.md  tmp.json  碎碎念.md
RustLearn/learning/: Cargo.toml
RustLearn/learning/src/: main.rs
config/: task.json
crates/controller/: Cargo.toml  readme.md
crates/controller/src/: config.rs  controller_trait.rs  lib.rs  main.rs
crates/controller/src/controllers/: controller_list.rs  impedance.rs  mod.rs  pid.rs
crates/iterator/: Cargo.toml
crates/iterator/src/: lib.rs
crates/massage/: Cargo.toml
crates/massage/msg/: RobotState.msg
crates/massage/src/: collision_object.rs  control_command.rs  lib.rs  massage_trait.rs  state.rs  target.rs
crates/message/: Cargo.toml
crates/message/src/: collision_object.rs  constraint.rs  control_command.rs  lib.rs  main.rs  message_trait.rs  problem.rs  state.rs  target.rs  track.rs
crates/planner/: Cargo.toml
crates/planner/src/: config.rs  lib.rs  planner_trait.rs
crates/planner/src/planners/: cfs.rs  cfs_branch.rs  linear.rs  linear_series.rs  mod.rs  planner_list.rs
crates/planner/src/utilities/: interpolation.rs  mod.rs  non_linear_constrain.rs
crates/recoder/: Cargo.toml
crates/recoder/src/: lib.rs  recoder_trait.rs
crates/robot/: Cargo.toml
crates/robot/src/: create.rs  lib.rs  robot_trait.rs  ros_thread.rs
crates/robot_macros_derive/: Cargo.toml
crates/robot_macros_derive/src/: lib.rs  node_macros.rs
crates/sensor/: Cargo.toml
crates/sensor/src/: config.rs  lib.rs  sensor_trait.rs
crates/simulator/: Cargo.toml
crates/simulator/scripts/: main.py  robot.py  test.py  zmq2rust.py
crates/simulator/src/: config.rs  lib.rs  main.rs  plant_trait.rs  simlulator_trait.rs  simulator_trait.rs
crates/simulator/src/plants/: first_order_lti.rs  linear_system.rs  mod.rs  plant_trait.rs
crates/simulator/src/simulators/: bullet.rs  simulator_list.rs
crates/solver/: Cargo.toml
crates/solver/src/: lib.rs  solver_trait.rs
crates/task_manager/: Cargo.toml
crates/task_manager/src/: lib.rs  post_office.rs  ros_thread.rs  state_collector.rs  task.rs  task_manage.rs  thread_manage.rs
crates/temp/: Cargo.toml
crates/temp/src/: main.rs
data/2024-08-24_15_22/: config.json
data/2024-08-24_15_22/test/: task.json
data/2024-08-28_11_16/: config.json
doc/Introduction to Robotics/: 机器人学导论学习笔记 1(CH 1,2).md
doc/task/: 00-1-1_rust的面向对象.md  00-1-2_RosThread.md  00-1_readme文档写作.md  01-1-1pybulletDoc(updating).md  01-1-2仿真器通讯结构.md  01-1_仿真器搭建.md  01-2-1_ROS 条件编译.md  01-2_Ros搭建与条件编译.md  01-3_现有规划控制理论.md  01-4_多线程发布与停止.md  01-5-1_Docker容器开发及其可视化.md  01-5-1_docker更新日志.md  01-5_docker环境封装.md  01-6-1_节点名称路径命名规范.md  01-6_节点唯一路径寻址.md  01-7-1_异步队列实现.md  01-7_通讯搭建.md  01-final.md  02-1-1_任务记录器，采用BufWriter.md  02-10_多臂仿真器与CMD启动序列.md  02-11_多臂cfs.md  02-11_多臂避障.md  02-12_宏与减少重复代码.md  02-13_障碍物距离.md  02-14-2_osqp.md  02-15_为消息添加泛型.md  02-16_修改关节梯度.md  02-17_消息邮局.md  02-18_任务约束.md  02-1_任务记录.md  02-2-1_障碍物距离.md  02-2_障碍物类型.md  02-3_安全检查.md  02-4_状态收集器.md  02-5_log与减少格式化输出.md  02-6_高阶插值规划器.md  02-7_正运动求解器与逆运动求解器.md  02-8-1_最优问题表达式.md  02-8-2_CFS执行逻辑.md  02-8_长程CFS规划器.md  (+5 more)
doc/tools/: Docker开发容器可视化.md  Docker开发容器服务.md
example/: explanner_interp_bullet_task.json  explanner_interp_excontroller_plant_task.json  explanner_interp_plant_task.json  explanner_plant_config.json  explanner_plant_task.json
scripts/: requirements.txt  start-vnc.sh
scripts/print/: fig_node_usage_distribution.py  fig_node_value.py  log_info.py  log_plotter.py  log_reader.py
scripts/simulators/: sim_pybullet.py
scripts/simulators/robot_pybullet/: franka_panda.py  load.py  robot.py
scripts/simulators/utilities/: zmq2rust.py
scripts/test/: dh_check.m  helloworld.py  install_osqp.m  osqp_robot.m  problem_check.m  quadprog_robot.m  solve_check.asv  solve_check.m  test_1  test_pybullet.py  test_pybullet_torque.py
scripts/test/python_zmq/: client.py  server.py
src/: collision_object.rs  config.rs  exp.rs  init.rs  main.rs  thread_manage.rs
src/controller/: Cargo.toml
src/controller/src/: config.rs  controller_trait.rs  lib.rs
src/generate_tools/: Cargo.toml
src/generate_tools/src/: lib.rs
src/kernel_macro/: Cargo.toml
src/kernel_macro/src/: lib.rs
src/manager/: Cargo.toml
src/manager/src/: config.rs  lib.rs  node_thread.rs  post_office.rs  task_manager.rs  thread_manager.rs
src/message/: Cargo.toml
src/message/src/: collision_object.rs  constraint.rs  control_command.rs  lib.rs  node_message.rs  problem.rs  state.rs  target.rs  track.rs
src/node/: Cargo.toml
src/node/src/: create.rs  lib.rs  node_trait.rs
src/node/src/communication/: mod.rs  zmq_comm.rs
src/node/src/example/: example_controller.rs  example_node.rs  example_planner.rs  mod.rs
src/node/src/nodes/: cfs.rs  cfs_branch.rs  cfs_end_pose.rs  impedence.rs  interp.rs  mod.rs  pid.rs  position.rs
src/node/src/plants/: franka_gripper_plant.rs  franka_panda_plant.rs  linear_system.rs  mod.rs
src/node/src/sensor_releaser/: mod.rs  obstacle_releaser.rs
src/node/src/simulators/: bullet.rs  mod.rs
src/node/src/utilities/: interp_fn.rs  mod.rs
src/planner/: Cargo.toml
src/planner/src/: config.rs  lib.rs  planner_trait.rs
src/planner/src/planners/: cfs.rs  interp.rs  mod.rs
src/planner/src/utilities/: interp_fn.rs  mod.rs  optimize.rs
src/recoder/: Cargo.toml
src/recoder/src/: recoder_trait.rs
src/robot/: Cargo.toml
src/robot/src/: config.rs  lib.rs  robot_trait.rs
src/sensor/: Cargo.toml
src/simulator/: Cargo.toml
src/simulator/scripts/: main.py  robot.py
src/simulator/src/: config.rs  lib.rs  plant_trait.rs  simulator_trait.rs
src/simulator/src/plants/: mod.rs
src/simulator/src/simulators/: bullet.rs  mod.rs  simulator_list.rs
src/solver/: Cargo.toml
tests/: code_check.rs  dh_check.rs  nalgebra_check.rs  osqp_check.rs  ros_check.rs  serialize_check.py  serialize_check.rs  task.json  task.yaml  yaml_json.rs  zmq_check.rs
tools/: Docker开发容器可视化.md  远程服务器使用方案.md
(+34 files in other folders)
