[workspace]
members = [
    "src/controller",
    "src/generate_tools",
    "src/manager",
    "src/message",
    "src/planner",
    "src/recoder",
    "src/robot",
    "src/sensor",
    "src/simulator",
    "src/solver",
]

[workspace.package]
repository = "https://github.com/Robot-Exp-Platform/Robot-Platform"

[package]
name = "robot_platform"
version = "0.1.0"
edition = "2021"
# edition = "2024"

[workspace.dependencies]
serde = { version = '*', features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
nalgebra = { version = "*", features = ["serde-serialize"] }
typenum = "*"
rosrust = '*'
rosrust_msg = '*'
zmq = "*"
zeromq = "*"
crossbeam = "*"
rand = "*"
chrono = "*"
lazy_static = "*"
approx = "*"
osqp = "*"
optimization_engine = "0.9.1"

message = { path = "src/message" }
robot = { path = "src/robot" }
generate_tools = { path = "src/generate_tools" }
manager = { path = "src/manager" }
planner = { path = "src/planner" }
recoder = { path = "src/recoder" }
sensor = { path = "src/sensor" }
simulator = { path = "src/simulator" }
solver = { path = "src/solver" }
controller = { path = "src/controller" }


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
nalgebra.workspace = true
crossbeam.workspace = true
rand.workspace = true
chrono.workspace = true
approx.workspace = true
zmq = { workspace = true, optional = true }
rosrust = { workspace = true, optional = true }
rosrust_msg = { workspace = true, optional = true }
osqp.workspace = true

message.workspace = true
robot.workspace = true
generate_tools.workspace = true
manager.workspace = true
planner.workspace = true
recoder.workspace = true
sensor.workspace = true
simulator.workspace = true
solver.workspace = true
controller.workspace = true


[features]
ros = []
ros2 = []
rszmq = []
recode = []
