[workspace]
members = [
    "src/generate_tools",
    "src/manager",
    "src/message",
    "src/node",
    "src/robot",
    "src/sensor",
    "src/solver",
]

[workspace.package]
repository = "https://github.com/Robot-Exp-Platform/Robot-Platform"

[package]
name = "robot_platform"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = '*', features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
nalgebra = { version = "*", features = ["serde-serialize"] }
typenum = "*"
rosrust = '*'
rosrust_msg = '*'
zmq = "*"
zeromq = "*"
crossbeam = "*"
rand = "*"
chrono = "*"
lazy_static = "*"
approx = "*"
osqp = "*"
optimization_engine = "0.9.1"
log = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["json"] }
tracing-appender = { version = "*" }

message = { path = "src/message" }
robot = { path = "src/robot" }
generate_tools = { path = "src/generate_tools" }
manager = { path = "src/manager" }
sensor = { path = "src/sensor" }
solver = { path = "src/solver" }
node = { path = "src/node" }
libfranka-rs = { path = "crates/libfranka-rs" }


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
nalgebra.workspace = true
crossbeam.workspace = true
rand.workspace = true
chrono.workspace = true
approx.workspace = true
zmq = { workspace = true, optional = true }
rosrust = { workspace = true, optional = true }
rosrust_msg = { workspace = true, optional = true }
osqp.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

message.workspace = true
robot.workspace = true
generate_tools.workspace = true
manager.workspace = true
sensor.workspace = true
solver.workspace = true
node.workspace = true


[features]
ros = []
ros2 = []
rszmq = []
