[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nalgebra = { workspace = true }
zmq = { workspace = true, optional = true }
rosrust = { workspace = true, optional = true }
rosrust_msg = { workspace = true, optional = true }

robot = { workspace = true }
recoder = { workspace = true }
task_manager = { workspace = true }


[features]
serde-serialize = ["nalgebra/serde-serialize"]

rszmq = ["zmq"]
noros = []
ros = ["rosrust", "rosrust_msg"]
ros2 = []
