[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robot = { path = "../robot" }
recoder = { path = "../recoder" }
task_manager = { path = "../task_manager" }
serde = { version = '*', features = ["derive"] }
serde_json = "*"
