[package]
name = "planner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam.workspace = true
nalgebra.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
optimization_engine = { workspace = true, optional = true }


robot.workspace = true
recoder.workspace = true
task_manager.workspace = true
message.workspace = true
robot_macros_derive.workspace = true
sensor.workspace = true

[features]
recode = []
open = ["optimization_engine"]
