[package]
name = "simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = { workspace = true }
typenum = { workspace = true }
zmq = { workspace = true, optional = true }
rosrust = { workspace = true, optional = true }
rosrust_msg = { workspace = true, optional = true }

robot = { workspace = true }
task_manager = { workspace = true }

[features]
noros = []
rszmq = ["zmq"]
ros = ["rosrust", "rosrust_msg"]
ros2 = []
