[package]
name = "task_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
nalgebra = { workspace = true }
zmq = { workspace = true, optional = true }

robot.workspace = true
message.workspace = true

[features]
rszmq = ["zmq"]
noros = []
ros = []
ros2 = []
