[package]
name = "manager"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
nalgebra.workspace = true
crossbeam.workspace = true
zmq = { workspace = true, optional = true }

message.workspace = true
robot.workspace = true
sensor.workspace = true
node.workspace = true
