[package]
name = "node"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
crossbeam.workspace = true
nalgebra.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
osqp.workspace = true
zmq = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true


message.workspace = true
generate_tools.workspace = true
robot.workspace = true
sensor.workspace = true
solver.workspace = true

[features]
default = ["rszmq"]
rszmq = ["zmq"]
ros = []
