[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
repository.workspace = true

[dependencies]
nalgebra.workspace = true
typenum.workspace = true
crossbeam.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
zmq = { workspace = true, optional = true }

robot.workspace = true
manager.workspace = true
message.workspace = true
recoder.workspace = true
sensor.workspace = true
generate_tools.workspace = true
